fixes ui glitch on dark mode

--- a/public/css/_donate.css
+++ b/public/css/_donate.css
@@ -41,7 +41,7 @@
 .donation-chart-bar {
     height: 100%;
     min-width: .6rem;
-    border-left: solid 5px white;
+    border-left: solid 5px var(--surface-background);
     border-radius: 0px 13px 13px 0px;
 }
 
